Added ReadMe and start service

--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,9 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<finalName>
+						oauth-server
+					</finalName>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
